2008-03-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test53_autoMuck): Wrote function.
	(PokerAvatarTestCase.autoMuck): Wrote function.

2008-03-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* Release 1.3.0

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.variousPacketsWithStringOrSinglePacketReturn):
	Wrote function.
	(PokerAvatarTestCase.test52_variousPackets): Wrote function.


2008-03-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.variousStartPackets): Wrote function.
	(PokerAvatarTestCase.test47_startPackets): Wrote function.
	(PokerAvatarTestCase.badSeatTable): Wrote function.
	(PokerAvatarTestCase.test48_seatPackets): Wrote function.
	(PokerAvatarTestCase.test49_badRebuy): Wrote function.
	(PokerAvatarTestCase.badBuyRebuyRequest): Wrote function.
	(PokerAvatarTestCase.test50_chat): Wrote function.
	(PokerAvatarTestCase.chatItUp): Wrote function.
	(PokerAvatarTestCase.leaveTable): Wrote function.
	(PokerAvatarTestCase.test51_doLeave): Wrote function.

2008-03-01  Loic Dachary <loic@dachary.org>

	* tests/test-pokeravatar.py.in: no need to check the position as it
	  is 1) redundant with the serial, 2) consistency has been checked
	  in the pokerexplain.py tests
	* tests/test-pokerexplain.py.in: add check to make sure the
	  position field of the PokerPosition packet is set.
	* pokernetwork/pokerexplain.py: because PacketPosition does not
	  serialize the serial member, the seat in position must be set for
	  clients requiring explain mode over the network (as opposed to
	  python based clients that embed the library).

2008-02-29  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py: fix the queuing packet bug +
	  document HTTP based protocols
	* tests/test-webservice.py.in: test to prove the queuing packet bug

2008-02-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.loseConnection): Wrote function.