@@ -2329,6 +2329,35 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.autoMuck, 0, 101, pokergame.AUTO_MUCK_LOSE)
         return d
     # ------------------------------------------------------------------------
+    def tableQuit(self, (client, packet), id, gameId ):
+        avatar = self.service.avatars[id]
+        table = self.service.getTable(gameId)
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerTableQuit(serial= client.getSerial(),
+                                                      game_id = gameId))
+        found = 0
+        for packet in avatar.resetPacketsQueue():
+            print "MyPACKET: "
+            print packet
+            if packet.type == PACKET_POKER_PLAYER_LEAVE:
+                found += 1
+                self.assertEquals(packet.game_id, gameId)
+                self.assertEquals(packet.serial, client.getSerial())
+                self.assertEqual(packet.seat, 1)
+        self.assertEquals(found, 1)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test54_doQuit(self):
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.tableQuit, 0, 101)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -2344,7 +2373,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test53"
+#    loader.methodPrefix = "test54"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
